--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,313 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+}
+
+.navBar {
+  font-weight: bold;
+  font-size: 18px;
+  border: 1px solid rgb(240, 6, 6);
+  background-color: rgb(255, 26, 26);
+  color: #00000070;
+  height: 8%;
+  width: 100%;
+}
+
+.background-image {
+  background-image: url('https://e7.pngegg.com/pngimages/864/29/png-clipart-blue-sky-background-blue-sky-background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.circle-letter {
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+}
+
+h1 {
+  font-size: 2rem;
+  color: #333;
+}
+
+p {
+  font-size: 1.2rem;
+  color: #666;
+  max-width: 500px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.confirmBtn {
+  width: 150px;
+  height: 45px;
+  margin: 10px;
+  border: none;
+  background-color: #f7b500;
   color: white;
+  border-radius: 8px;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.input-comp {
+  position: relative;
+  background-color: #fcfcfc;
+  color: rgb(0, 0, 0);
+  border: 2px solid #000000;
+  border-radius: 5%;
+  width: 70%;
+  height: 45px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.button-container {
+  position: relative;
+  background-color: #f7b500;
+  color: rgb(255, 255, 255);
+  border: 1px solid white;
+  border-radius: 10%;
+  width: 30%;
+  height: 48px;
+}
+
+.circle-wrapper {
+  background-color: #fcfcfc;
+  position: relative;
+  margin-top: 10px;
+  width: 100%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle-container {
+  background-color: #efefef;
+  position: relative;
+  border-radius: 50%;
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 80%;
+  padding: 20px;
+}
+
+.fa-regular {
+  display: block;
+  color: #000000;
+}
+
+.question {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  word-break: break-all;
+  hyphens: auto;
+  text-overflow: ellipsis;
+  color: #000000;
+  position: relative;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.input-container {
+  position: absolute;
+  width: 100%;
+  max-width: 450px;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.circle-inner {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  border: 2px solid #000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.circle-component {
+  background-color: #ffffff;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
+  position: absolute;
+
+}
+
+.current {
+  width: 45px !important;
+  height: 45px !important;
+  border: 3px solid black !important;
+}
+
+.not-current {
+  border: 1px solid grey !important;
+}
+
+.correct {
+  background-color: #3dd300;
+  color: white;
+  animation: rotate 2s linear infinite;
+  animation-iteration-count: 1;
+  /* Start with animation paused */
+}
+
+.wrong {
+  background-color: #d30000;
+  color: white;
+  animation: rotate 2s linear infinite;
+  animation-iteration-count: 1;
+  /* Start with animation paused */
+}
+
+.skipped {
+  background-color: #f7b500;
+  color: white;
+  animation: rotate 2s linear infinite;
+  animation-iteration-count: 1;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(0deg);
   }
-  to {
-    transform: rotate(360deg);
+
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+@media (max-width: 576px) {
+  .circle-wrapper {
+    align-items: flex-start;
+    margin-top: 50px;
+  }
+
+  .circle-container {
+    padding: 10px;
+  }
+
+  .input-container {
+    top: 75% !important;
+    width: 70%;
+  }
+
+  .circle-inner {
+    padding: 10px;
+
+  }
+
+  .circle-component {
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+  }
+
+  .current {
+    width: 20px !important;
+    height: 20px !important;
+    border: 2px solid black !important;
+
+  }
+
+  .not-current {
+    border: 1px solid grey !important;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 770px) {
+  .circle-container {
+    padding: 10px;
+    bottom: 20%;
+  }
+
+  .circle-inner {
+    padding: 10px;
+
+  }
+
+  .input-container {
+    top: 80% !important;
+    width: 70%;
+
+  }
+
+  .circle-component {
+    width: 25px;
+    height: 25px;
+    font-size: 15px;
+  }
+
+  .current {
+    width: 25px !important;
+    height: 25px !important;
+    border: 2px solid black !important;
+
+  }
+
+  .not-current {
+    border: 1px solid grey !important;
+  }
+}
+
+@media (min-width: 770px) {
+  .circle-container {
+    padding: 10px;
+  }
+
+  .circle-inner {
+    padding: 10px;
+
+  }
+
+  .input-container {
+    top: 60%;
+  }
+
+  .circle-component {
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+  }
+
+  .current {
+    width: 30px !important;
+    height: 30px !important;
+    border: 2px solid black !important;
+  }
+
+  .not-current {
+    border: 1px solid grey !important;
   }
 }
