--- a/src/App.css
+++ b/src/App.css
@@ -142,9 +142,10 @@ a {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: center;
-  
+
 }
-.fa-brands{
+
+.fa-brands {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -229,12 +230,15 @@ a {
     transform: rotateY(360deg);
   }
 }
-@media (max-width: 576px) and (min-height: 750){
+
+@media (max-width: 576px) and (min-height: 750) {
   .circle-wrapper {
     align-items: flex-start;
     margin-top: 50px;
   }
-
+  .question{
+    top:75% !important;
+  }
   .circle-container {
     padding: 10px;
   }
