--- a/src/Components/Instruction.css
+++ b/src/Components/Instruction.css
@@ -64,15 +64,19 @@
 
 @media (max-width: 460px) {
     .instructionContainer {
-        height: 85%;
-        width: 70%;
+        height: 90%;
+        width: 75%;
     }
 
     .textInstruction {
-        font-size: 17px;
+        font-size: 15px;
     }
+
     .startBtn {
-        height: 8%;}
+        height: 8%;
+        font-size: 15px;
+
+    }
 
 }
 
